--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
 
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
     annotationProcessor "androidx.lifecycle:lifecycle-extensions:2.1.0"
+    implementation 'androidx.cardview:cardview:1.0.0'
 }
