--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    //for viewmodel
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
     annotationProcessor "androidx.lifecycle:lifecycle-extensions:2.1.0"
+
+    //for cardview
     implementation 'androidx.cardview:cardview:1.0.0'
 }
